<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#EE000000"
    tools:context="com.sdsmdg.kd.magnetomania.GameOverActivity">

    <TextView
        android:id="@+id/GameOver"
        android:text="@string/GameOverMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/ExtraMessage"
        android:layout_below="@id/GameOver"
        android:text="@string/ExtraMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_below="@id/ExtraMessage"
        android:text="@string/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_margin="5dp"/>

    <TextView android:id="@+id/user_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_margin="5dp"/>
</RelativeLayout>
